Update the site name

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lobster|Nunito" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   </head>
-    <title>Momoodesign project</title>
+    <title>Mdesign | Login-Signup Form Design</title>
   </head>
   <body>
     <noscript>
